# trading-confidence-engine

./: .gitignore  DEPLOY.md  Makefile  README.md
apps/api/: .dockerignore  Dockerfile  env.example  pyproject.toml
apps/api/scripts/: calibration_report.py
apps/api/src/api/: main.py
apps/api/src/api/routes/: backtest.py  chat.py  compare.py  hedge.py  lab.py  methods.py  options.py  portfolio.py  portfolio_analysis.py  prices.py  risk.py  ticker.py
apps/api/src/calculators/backtest/: __init__.py  engine.py  metrics.py  runner.py  strategies.py  strategies_extra.py
apps/api/src/calculators/options/: __init__.py  _common.py  binomial.py  black_scholes.py  crank_nicolson.py  monte_carlo.py  runner.py  strategy.py
apps/api/src/calculators/portfolio/: __init__.py  _common.py  inverse_vol.py  max_sharpe.py  mean_variance.py  min_variance.py  risk_parity.py  runner.py
apps/api/src/calculators/risk/: __init__.py  _common.py  bootstrap.py  cornish_fisher.py  runner.py  (+3 more)
apps/api/src/core/: __init__.py  audit.py  schemas.py  trader_schemas.py
apps/api/src/data_providers/: __init__.py  market_data.py  ticker_info.py  universe.py
apps/api/src/kb/: __init__.py  catalog.py
apps/api/src/llm/: __init__.py  router.py
apps/api/src/orchestration/: __init__.py  backtest_pipeline.py  hedge_finder.py  peer_finder.py  pipeline.py  portfolio_analysis.py  portfolio_pipeline.py  strategy_pipeline.py  var_pipeline.py
apps/api/src/parser/: __init__.py  options.py  portfolio_csv.py
apps/api/src/scoring/: __init__.py  backtest_confidence.py  confidence.py  portfolio_confidence.py  var_confidence.py
apps/api/src/verification/: __init__.py  cross_method.py  cross_method_strategy.py  cross_method_var.py  cross_solver_portfolio.py  invariants.py  invariants_backtest.py  invariants_portfolio.py  invariants_strategy.py  invariants_var.py  per_method.py  sensitivity_portfolio.py
apps/api/tests/: conftest.py  test_api.py  test_chat.py  test_chat_families.py  test_methods.py  test_prices.py
apps/api/tests/adversarial/: test_false_positives.py
apps/api/tests/api/: test_compare_routes.py  test_hedge_routes.py  test_lab_routes.py  test_portfolio_analysis_routes.py  test_ticker_routes.py
apps/api/tests/backtest/: test_engine.py  test_pipeline.py
apps/api/tests/calculators/: test_backtest_strategies_extra.py  test_options_matrix.py  test_options_methods_extra.py  test_portfolio_methods_extra.py  test_strategy.py  test_var_methods_extra.py
apps/api/tests/orchestration/: test_pipeline.py  test_strategy_pipeline.py
apps/api/tests/parser/: test_portfolio_csv.py
apps/api/tests/portfolio/: test_optimizers.py  test_pipeline.py  test_risk_parity.py
apps/api/tests/risk/: test_var_methods.py  test_var_pipeline.py
apps/api/tests/v9/: test_adversarial_properties.py  test_calibration_script.py
apps/api/tests/verification/: test_invariants.py  test_per_method.py
(+70 files in other folders)
