[project]
name = "trading-confidence-engine-api"
version = "0.1.0"
description = "High-confidence trading calculation engine (V0 skeleton)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "py-vollib>=1.0.1",
    "QuantLib>=1.36",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "litellm>=1.55.0",
    "yfinance>=0.2.50",
    "cvxpy>=1.5.0",
    "clarabel>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.115.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "N"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
# Scripts need to set sys.path before importing local modules — that's a
# legitimate reason for E402.
"scripts/*.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["py_vollib.*", "QuantLib.*", "scipy.*", "yfinance.*", "pandas", "pandas.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# cvxpy uses dynamic attributes (quad_form, sum, etc.) — disable analysis.
module = ["cvxpy", "cvxpy.*"]
follow_imports = "skip"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["."]
